--- a/css/10-dars.css
+++ b/css/10-dars.css
@@ -133,3 +133,67 @@ body{
   line-height: 29px;
   color: #4B5D68;
 }
+.fourth{
+  text-align: center;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 150px;
+}
+.fourth-h{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  color: #212353;
+  margin-bottom: 50px;
+}
+.fourth-p{
+  font-style: 500;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 29px;
+  color: #4B5D68;
+  width: 584px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 70px;
+}
+.fourth-list{
+  display: flex;
+  flex-wrap: wrap;
+  text-decoration: none;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+.fourth-list-type{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  text-align: start;
+  width: 550px;
+  margin-bottom: 50px;
+  margin-right: 42px;
+  background-color: #68C9BA;
+  border-radius:83% 7% 36% 100% / 78% 31% 17% 0% ;
+  transition: background-color 0.3s ease;
+}
+.fourth-div{
+  margin-bottom: 50px;
+  margin-left: 30px;
+  padding: 10px;
+}
+.fourth-div a{
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 26px;
+  color: #212353;
+}
+.fourth-list-type:hover{
+  background-color: #F063B8;
+  width: 550px;
+  transform: rotate(3deg);
+}
