--- a/css/10-dars.css
+++ b/css/10-dars.css
@@ -61,6 +61,10 @@ body{
   border-radius: 30px;
   box-shadow: 2px 2px 6px #4B5D68;
 }
+.link-demo img{
+  width: 20px;
+  margin-left: 20px;
+}
 .second{
   display: flex;
   align-items: center;
